# PrimeiraAPI

./: pyproject.toml
src/: app.py
